--- a/platform_code/home/templates/home/profile-orga-creation-modal.html
+++ b/platform_code/home/templates/home/profile-orga-creation-modal.html
@@ -16,7 +16,7 @@
 
         </div>
         <div class="modal-footer">
-            <input id="orga-creation" type="submit" class="btn btn-primary same-size-250" value="{% trans 'Create the organisation' %} style="margin: auto" />
+            <input id="orga-creation" type="submit" class="btn btn-primary same-size-250" value="{% trans 'Create the organisation' %}" style="margin: auto" />
             <input type="button" class="btn btn-danger same-size-250" data-dismiss="modal" value="{% trans 'Cancel' %}" style="margin: auto;"/>
         </div>
     </form>
