--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -27,6 +27,11 @@
 </head>
 <body class="navbar-is-fixed-top">
 <header>
+
+<!--    Beta banner -->
+
+   <div class="ribbon"><span>Beta</span></div>
+
      <nav class="navbar navbar-expand-lg  is-fixed-top">
     <div class="container">
       <a class="navbar-brand" title="home" href="{% url 'home:homepage' %}" style="color: #FFF;">
