Remove the glossary from user dashboard

--- a/platform_code/home/templates/home/profile-my-ressources.html
+++ b/platform_code/home/templates/home/profile-my-ressources.html
@@ -13,8 +13,9 @@
        aria-selected="true">{% trans "My favorite resources" %}</a>
     <a class="nav-item nav-link title-nav" id="nav-resources-tab" data-toggle="tab"
        href="#nav-resources" role="tab" aria-controls="nav-resources" aria-selected="false">{% trans "Resources" %}</a>
-    <a class="nav-item nav-link title-nav" id="nav-glossary-tab" data-toggle="tab"
-       href="#nav-glossary" role="tab" aria-controls="nav-glossary" aria-selected="false">{% trans "Glossary" %}</a>
+<!--      The glossary is temporary removed as long as the content is not ready to be deployed -->
+<!--    <a class="nav-item nav-link title-nav" id="nav-glossary-tab" data-toggle="tab"-->
+<!--       href="#nav-glossary" role="tab" aria-controls="nav-glossary" aria-selected="false">{% trans "Glossary" %}</a>-->
   </div>
 </nav>
 
@@ -101,12 +102,12 @@
       {% endfor %}
   </div>
 <!--    Todo manage the glossary (new dedicated html file, see how to import/create it)-->
-  <div class="tab-pane fade" id="nav-glossary" role="tabpanel" aria-labelledby="nav-glossary-tab">
-      <ul class="margin-50">
-      <li class="list-with-disc">
-          <p><strong>{% trans "Privacy:" %}</strong>{% trans "the right to an individual to control who have access to his personal data."%}</p>
-      </li>
-      </ul>
-  </div>
+<!--  <div class="tab-pane fade" id="nav-glossary" role="tabpanel" aria-labelledby="nav-glossary-tab">-->
+<!--      <ul class="margin-50">-->
+<!--      <li class="list-with-disc">-->
+<!--          <p><strong>{% trans "Privacy:" %}</strong>{% trans "the right to an individual to control who have access to his personal data."%}</p>-->
+<!--      </li>-->
+<!--      </ul>-->
+<!--  </div>-->
 </div>
 
